--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
 
-
 /* width */
 ::-webkit-scrollbar {
   width: 0.5rem;
@@ -31,17 +30,6 @@
   box-sizing: border-box;
 }
 
-body {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url('assets/pergen_background.svg');
-  background-size: cover;
-  overflow: hidden;
-}
-
 h1,h3 {
   font-family: 'Bebas Neue', cursive;
   text-transform: uppercase;
@@ -66,10 +54,22 @@ strong {
   font-weight: 700;
 }
 
+.body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  /* background-image: url('assets/pergen_background.svg'); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
 
 .content {
-  height: 90vh;
-  width: 90vw;
+  /* margin: 0px auto; */
+  height: 90%;
+  width: 90%;
   padding: 0 5vw;
   background-color: transparent;
   border-left: 1px solid #208eff;
